# AMR-IF-UI

./: .gitignore  CMakeLists.txt  angular.json  package.xml
docs/: gui.md  index.md  index_en.md  msgtype.md  msgtype_en.md
launch/: ng_serve.launch
script/: ng_serve.sh
