<?xml version="1.0"?>
<package format="2">
  <name>amr_if_ui</name>
  <version>0.0.0</version>
  <description><a href="https://robo-marc.github.io/AMR-IF-UI/">Autonomous mobile robot Web user interface.</a></description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="n-ando@aist.go.jp">Noriaki Ando</maintainer>
  <author>ROBO-MARC Project</author>
  <author email="n-ando@aist.go.jp">ROBO-MARC Project</author>
  <license>BSD</license>
  <url type="website">https://robo-marc.github.io/AMR-IF-UI/</url>
  <url type="bugtracker">https://github.com/robo-marc/AMR-IF-UI/issues</url>
  <url type="repository">https://github.com/robo-marc/AMR-IF-UI</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>nodejs</exec_depend>
  <exec_depend>npm</exec_depend>
  <test_depend>rostest</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
